--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "@reduxjs/toolkit": "^2.6.0",
     "@tailwindcss/vite": "^4.0.9",
     "@uidotdev/usehooks": "^2.4.1",
+    "antd": "^5.24.3",
     "axios": "^1.8.1",
     "chart.js": "^4.4.8",
+    "framer-motion": "^12.4.10",
     "js-cookie": "^3.0.5",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
+    "react-countdown": "^2.3.6",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-phone-input-2": "^2.15.1",
     "react-redux": "^9.2.0",
     "react-router": "^7.2.0",
     "sonner": "^2.0.1",
